Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.2(EOL), 10.3(EOL), 10.4(EOL), 10.5(EOL), 10.6(EOL), 10.7(EOL), 10.8(EOL), 10.9(EOL)
-
None
Description
We can often see warnings like this:
2021-12-09 4:00:59 0 [Warning] InnoDB: Allocated tablespace ID 40667422 for db/tablename, old maximum was 0
|
upon startup of MariaDB server (after crash recovery, while preparing the backup etc). What is the point to warn DBA about this?
From quick code review (see fil_space_create( ) function, storage/innobase/fil/fil0fil.cc line 1254 in current 10.4 on GitHub, for example) it seems to be written once as soon as there is any other tablespace that the 0 one. Next tablespace will produce no warning.
So, why is it a warning, not even Info, and what is the point to give it (and then suppress in the tests)?
If the warning is something to ignore, can we get rid of it in non-debug builds or in mariabackup at least? If it has a point, can we document what does it mean for production DBA?