storage/innobase/fil/fil0fil.cc
@@ -1243,12 +1243,15 @@ fil_space_create(
 	if ((purpose == FIL_TYPE_TABLESPACE || purpose == FIL_TYPE_IMPORT)
 	    && !recv_recovery_is_on()
 	    && id > fil_system.max_assigned_id) {
+
 		if (!fil_system.space_id_reuse_warned) {
 			fil_system.space_id_reuse_warned = true;
-
-			ib::warn() << "Allocated tablespace ID " << id
-				<< " for " << name << ", old maximum was "
-				<< fil_system.max_assigned_id;
+			if (srv_operation != SRV_OPERATION_BACKUP) {
+				ib::warn() << "Allocated tablespace ID " << id
+					<< " for " << name
+					<< ", old maximum was "
+					<< fil_system.max_assigned_id;
+			}
 		}
 
 		fil_system.max_assigned_id = id;
